--- a/minet.cfg
+++ b/minet.cfg
@@ -1,7 +1,7 @@
 
 MINET_ETHERNETDEVICE="br0"
-MINET_IPADDR="10.10.50.100"
-MINET_ETHERNETADDR="78:2B:CB:9E:6C:9B"
+MINET_IPADDR=""
+MINET_ETHERNETADDR="78:2B:CB:AF:20:3B"
 MINET_DEBUGLEVEL="10"
 MINET_DISPLAY="xterm"
 MINET_MODULES="monitor device_driver ethernet_mux arp_module ip_module other_module ip_mux icmp_module udp_module tcp_module ipother_module sock_module socklib_module"
